# rb-admin

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml  requirements-freeze.txt  requirements.txt  start.sh
apps/books/: admin.py  filters.py  models.py  serializers.py  views.py
apps/books/migrations/: 0001_initial.py  0002_remove_book_series_delete_bookseries.py  0003_remove_book_photos.py  0004_bookphoto.py  0005_alter_book_entered_at.py  0006_alter_book_entered_at.py  0007_book_series.py
apps/core/migrations/: 0001_create_admin.py
apps/libraries/: admin.py  models.py  serializers.py  views.py
apps/libraries/migrations/: 0001_initial.py
apps/series/: admin.py  apps.py  models.py  serializers.py  views.py
apps/series/migrations/: 0001_initial.py
config/: settings.py  urls.py
